// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Unit tests for Deployment metrics  Ensure error state is rendred 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main main"
  >
    <div
      class="StyledProps--font StyledProps--main filters"
    >
      <span
        class="bp3-icon bp3-icon-filter StyledProps--main"
        icon="filter"
      >
        <svg
          data-icon="filter"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <desc>
            filter
          </desc>
          <path
            d="M13.99.99h-12a1.003 1.003 0 00-.71 1.71l4.71 4.71V14a1.003 1.003 0 001.71.71l2-2c.18-.18.29-.43.29-.71V7.41L14.7 2.7a1.003 1.003 0 00-.71-1.71z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <div
        class="bp3-popover-wrapper MultiSelectDropDown--main filterDropdown"
      >
        <div
          class="bp3-popover-target"
        >
          <div
            class="Layout--horizontal StyledProps--main MultiSelectDropDown--dropdownButton MultiSelectDropDown--withBorder MultiSelectDropDown--minWidth StyledProps--flex"
            data-testid="transaction_name_filter"
            style="min-width: 130px;"
          >
            <div
              class="Layout--horizontal StyledProps--main MultiSelectDropDown--labelWrapper StyledProps--flex"
            >
              <p
                class="StyledProps--font Text--lineclamp StyledProps--main MultiSelectDropDown--label"
                data-testid="dropdown-value"
                style="--text-line-clamp: 1;"
              >
                rbac.group: all
              </p>
            </div>
            <span
              class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey400"
              data-icon="main-chevron-down"
            >
              <svg
                height="8"
                viewBox="0 0 14 8"
                width="8"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M13 0c-.3 0-.5.1-.7.3L7 5.6 1.7.3C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7l6 6c.2.2.4.3.7.3s.5-.1.7-.3l6-6c.2-.2.3-.4.3-.7 0-.6-.4-1-1-1z"
                  fill="#4d5969"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
      <div
        class="bp3-popover-wrapper MultiSelectDropDown--main filterDropdown"
      >
        <div
          class="bp3-popover-target"
        >
          <div
            class="Layout--horizontal StyledProps--main MultiSelectDropDown--dropdownButton MultiSelectDropDown--withBorder MultiSelectDropDown--minWidth StyledProps--flex"
            data-testid="node_name_filter"
            style="min-width: 130px;"
          >
            <div
              class="Layout--horizontal StyledProps--main MultiSelectDropDown--labelWrapper StyledProps--flex"
            >
              <p
                class="StyledProps--font Text--lineclamp StyledProps--main MultiSelectDropDown--label"
                data-testid="dropdown-value"
                style="--text-line-clamp: 1;"
              >
                pipeline.nodesLabel: all
              </p>
            </div>
            <span
              class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey400"
              data-icon="main-chevron-down"
            >
              <svg
                height="8"
                viewBox="0 0 14 8"
                width="8"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M13 0c-.3 0-.5.1-.7.3L7 5.6 1.7.3C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7l6 6c.2.2.4.3.7.3s.5-.1.7-.3l6-6c.2-.2.3-.4.3-.7 0-.6-.4-1-1-1z"
                  fill="#4d5969"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
      <div
        class="bp3-popover-wrapper MultiSelectDropDown--main filterDropdown"
      >
        <div
          class="bp3-popover-target"
        >
          <div
            class="Layout--horizontal StyledProps--main MultiSelectDropDown--dropdownButton MultiSelectDropDown--withBorder MultiSelectDropDown--minWidth StyledProps--flex"
            data-testid="HealthSource_MultiSelect_DropDown"
            style="min-width: 130px;"
          >
            <div
              class="Layout--horizontal StyledProps--main MultiSelectDropDown--labelWrapper StyledProps--flex"
            >
              <p
                class="StyledProps--font Text--lineclamp StyledProps--main MultiSelectDropDown--label"
                data-testid="dropdown-value"
                style="--text-line-clamp: 1;"
              >
                pipeline.verification.healthSourceLabel: all
              </p>
            </div>
            <span
              class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey400"
              data-icon="main-chevron-down"
            >
              <svg
                height="8"
                viewBox="0 0 14 8"
                width="8"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M13 0c-.3 0-.5.1-.7.3L7 5.6 1.7.3C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7l6 6c.2.2.4.3.7.3s.5-.1.7-.3l6-6c.2-.2.3-.4.3-.7 0-.6-.4-1-1-1z"
                  fill="#4d5969"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
      <div
        class="bp3-popover-wrapper filterDropdown Select--main bp3-fill"
      >
        <div
          class="bp3-popover-target"
        >
          <div
            class="bp3-input-group"
          >
            <input
              autocomplete="off"
              class="bp3-input"
              name="data"
              placeholder="- Select -"
              style="padding-right: 0px;"
              type="text"
              value="Raw"
            />
            <span
              class="bp3-input-action"
            >
              <span
                class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                icon="chevron-down"
              >
                <svg
                  data-icon="chevron-down"
                  height="14"
                  viewBox="0 0 16 16"
                  width="14"
                >
                  <desc>
                    chevron-down
                  </desc>
                  <path
                    d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
    <label
      class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox anomolousCheckbox StyledProps--main"
    >
      <input
        data-testid="anomalousFilterCheckbox"
        type="checkbox"
      />
      <span
        class="bp3-control-indicator"
      />
      pipeline.verification.anomalousMetricsFilterLabel
    </label>
    <div
      class="Layout--horizontal StyledProps--main filterSecondRow StyledProps--border StyledProps--border-bottom"
    >
      <div
        class="StyledProps--font StyledProps--main accordionToggleButtons"
      />
      <div
        class="Layout--horizontal StyledProps--main"
      >
        <div
          class="Layout--horizontal StyledProps--main legend"
        >
          <span
            class="predicted"
          />
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-variation-small"
          >
             
            connectors.cdng.baseline
          </p>
          <span
            class="actualFail"
          />
          <span
            class="actualWarning"
          />
          <span
            class="actualObserve"
          />
          <span
            class="actualHealthy"
          />
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-variation-small"
          >
            common.current
          </p>
        </div>
      </div>
    </div>
    <div
      class="StyledProps--font StyledProps--main content whiteBackground"
    >
      <div
        class="StyledProps--font StyledProps--main PageError--pageError StyledProps--flex StyledProps--flex-align-center-center"
        data-testid="page-error"
        style="width: 100%; height: 100%;"
      >
        <div
          class="Layout--vertical Layout--layout-spacing-medium StyledProps--main error"
          style="align-items: center; width: 500px;"
        >
          <span
            class="bp3-icon bp3-icon-error StyledProps--main StyledProps--color StyledProps--color-red500"
            icon="error"
          >
            <svg
              data-icon="error"
              height="32"
              viewBox="0 0 20 20"
              width="32"
            >
              <desc>
                error
              </desc>
              <path
                d="M10 0C4.48 0 0 4.48 0 10s4.48 10 10 10 10-4.48 10-10S15.52 0 10 0zm1 16H9v-2h2v2zm0-3H9V4h2v9z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-align-center StyledProps--color StyledProps--color-red500"
          >
            mockError
          </p>
          <button
            aria-label="Retry"
            class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-primary"
            type="button"
          >
            <span
              class="bp3-button-text"
            >
              Retry
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Unit tests for Deployment metrics  Ensure no data state is rendered 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main main"
  >
    <div
      class="StyledProps--font StyledProps--main filters"
    >
      <span
        class="bp3-icon bp3-icon-filter StyledProps--main"
        icon="filter"
      >
        <svg
          data-icon="filter"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <desc>
            filter
          </desc>
          <path
            d="M13.99.99h-12a1.003 1.003 0 00-.71 1.71l4.71 4.71V14a1.003 1.003 0 001.71.71l2-2c.18-.18.29-.43.29-.71V7.41L14.7 2.7a1.003 1.003 0 00-.71-1.71z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <div
        class="bp3-popover-wrapper MultiSelectDropDown--main filterDropdown"
      >
        <div
          class="bp3-popover-target"
        >
          <div
            class="Layout--horizontal StyledProps--main MultiSelectDropDown--dropdownButton MultiSelectDropDown--withBorder MultiSelectDropDown--minWidth StyledProps--flex"
            data-testid="transaction_name_filter"
            style="min-width: 130px;"
          >
            <div
              class="Layout--horizontal StyledProps--main MultiSelectDropDown--labelWrapper StyledProps--flex"
            >
              <p
                class="StyledProps--font Text--lineclamp StyledProps--main MultiSelectDropDown--label"
                data-testid="dropdown-value"
                style="--text-line-clamp: 1;"
              >
                rbac.group: all
              </p>
            </div>
            <span
              class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey400"
              data-icon="main-chevron-down"
            >
              <svg
                height="8"
                viewBox="0 0 14 8"
                width="8"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M13 0c-.3 0-.5.1-.7.3L7 5.6 1.7.3C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7l6 6c.2.2.4.3.7.3s.5-.1.7-.3l6-6c.2-.2.3-.4.3-.7 0-.6-.4-1-1-1z"
                  fill="#4d5969"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
      <div
        class="bp3-popover-wrapper MultiSelectDropDown--main filterDropdown"
      >
        <div
          class="bp3-popover-target"
        >
          <div
            class="Layout--horizontal StyledProps--main MultiSelectDropDown--dropdownButton MultiSelectDropDown--withBorder MultiSelectDropDown--minWidth StyledProps--flex"
            data-testid="node_name_filter"
            style="min-width: 130px;"
          >
            <div
              class="Layout--horizontal StyledProps--main MultiSelectDropDown--labelWrapper StyledProps--flex"
            >
              <p
                class="StyledProps--font Text--lineclamp StyledProps--main MultiSelectDropDown--label"
                data-testid="dropdown-value"
                style="--text-line-clamp: 1;"
              >
                pipeline.nodesLabel: all
              </p>
            </div>
            <span
              class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey400"
              data-icon="main-chevron-down"
            >
              <svg
                height="8"
                viewBox="0 0 14 8"
                width="8"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M13 0c-.3 0-.5.1-.7.3L7 5.6 1.7.3C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7l6 6c.2.2.4.3.7.3s.5-.1.7-.3l6-6c.2-.2.3-.4.3-.7 0-.6-.4-1-1-1z"
                  fill="#4d5969"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
      <div
        class="bp3-popover-wrapper MultiSelectDropDown--main filterDropdown"
      >
        <div
          class="bp3-popover-target"
        >
          <div
            class="Layout--horizontal StyledProps--main MultiSelectDropDown--dropdownButton MultiSelectDropDown--withBorder MultiSelectDropDown--minWidth StyledProps--flex"
            data-testid="HealthSource_MultiSelect_DropDown"
            style="min-width: 130px;"
          >
            <div
              class="Layout--horizontal StyledProps--main MultiSelectDropDown--labelWrapper StyledProps--flex"
            >
              <p
                class="StyledProps--font Text--lineclamp StyledProps--main MultiSelectDropDown--label"
                data-testid="dropdown-value"
                style="--text-line-clamp: 1;"
              >
                pipeline.verification.healthSourceLabel: all
              </p>
            </div>
            <span
              class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey400"
              data-icon="main-chevron-down"
            >
              <svg
                height="8"
                viewBox="0 0 14 8"
                width="8"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M13 0c-.3 0-.5.1-.7.3L7 5.6 1.7.3C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7l6 6c.2.2.4.3.7.3s.5-.1.7-.3l6-6c.2-.2.3-.4.3-.7 0-.6-.4-1-1-1z"
                  fill="#4d5969"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
      <div
        class="bp3-popover-wrapper filterDropdown Select--main bp3-fill"
      >
        <div
          class="bp3-popover-target"
        >
          <div
            class="bp3-input-group"
          >
            <input
              autocomplete="off"
              class="bp3-input"
              name="data"
              placeholder="- Select -"
              style="padding-right: 0px;"
              type="text"
              value="Raw"
            />
            <span
              class="bp3-input-action"
            >
              <span
                class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                icon="chevron-down"
              >
                <svg
                  data-icon="chevron-down"
                  height="14"
                  viewBox="0 0 16 16"
                  width="14"
                >
                  <desc>
                    chevron-down
                  </desc>
                  <path
                    d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
    <label
      class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox anomolousCheckbox StyledProps--main"
    >
      <input
        data-testid="anomalousFilterCheckbox"
        type="checkbox"
      />
      <span
        class="bp3-control-indicator"
      />
      pipeline.verification.anomalousMetricsFilterLabel
    </label>
    <div
      class="Layout--horizontal StyledProps--main filterSecondRow StyledProps--border StyledProps--border-bottom"
    >
      <div
        class="StyledProps--font StyledProps--main accordionToggleButtons"
      />
      <div
        class="Layout--horizontal StyledProps--main"
      >
        <div
          class="Layout--horizontal StyledProps--main legend"
        >
          <span
            class="predicted"
          />
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-variation-small"
          >
             
            connectors.cdng.baseline
          </p>
          <span
            class="actualFail"
          />
          <span
            class="actualWarning"
          />
          <span
            class="actualObserve"
          />
          <span
            class="actualHealthy"
          />
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-variation-small"
          >
            common.current
          </p>
        </div>
      </div>
    </div>
    <div
      class="StyledProps--font StyledProps--main content whiteBackground"
    >
      <div
        class="StyledProps--font StyledProps--main noData"
      >
        <div
          class="StyledProps--font StyledProps--main NoDataCard--noDataCard StyledProps--flex StyledProps--flex-align-center-center"
        >
          <div
            class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
            style="align-items: center; margin-top: -48px; width: 470px;"
          >
            <img
              src="test-file-stub"
            />
            <p
              class="StyledProps--font StyledProps--main NoDataCard--message StyledProps--font-align-center StyledProps--color StyledProps--color-grey600"
            >
              cv.monitoredServices.noMatchingData
            </p>
            <div
              class="NoDataCard--buttonContainer"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
